# nfc-tools

./: README.md
desknfc/: CMakeLists.txt  Content.cpp  Content.h  ContentWidget.ui  Doxyfile.in  NfcDevice.cpp  NfcDevice.h  NfcDevice.xml  NfcDeviceManager.cpp  NfcDeviceManager.h  NfcTarget.cpp  NfcTarget.h  NfcUiManager.cpp  NfcUiManager.h  Notification.cpp  Notification.h  Notify.xml  NotifyAction.cpp  NotifyAction.h  TargetWidget.ui  config.h.cmake  desknfc.desktop  desknfc.notifyrc  main.cpp  plasma-applet-desknfc.desktop  systray.qrc
desknfc/i18n/: fr_FR.ts
desknfc/icons/: CMakeLists.txt
desknfc/ui/: DesknfcPlasmoid.cpp  DesknfcPlasmoid.h  MainWindow.ui  NotifierDialog.cpp  NotifierDialog.h  NotifierView.cpp  NotifierView.h
libnfc-llcp/: AUTHORS  HACKING  Makefile.am  configure.ac  gdbrc
libnfc-llcp/doc/: Makefile.am  data-link-connection-status.dot  link-activation-as-initiator.msc  link-activation-as-target.msc  link-deactivation-as-initiator.msc  link-deactivation-as-target.msc
libnfc-llcp/examples/: Makefile.am
libnfc-llcp/examples/nexus-get-tag/: Makefile.am  nexus-get-tag.c
libnfc-llcp/examples/npp-client/: Makefile.am  npp-client.c
libnfc-llcp/examples/npp-server/: Makefile.am  npp-server.c
libnfc-llcp/libnfc-llcp/: Makefile.am  llc_connection.c  llc_connection.h  llc_link.c  llc_link.h  llc_service.c  llc_service.h  llc_service_llc.c  llc_service_llc.h  llc_service_sdp.c  llc_service_sdp.h  llcp.c  llcp.h  llcp_log.c  llcp_log.h  llcp_parameters.c  llcp_parameters.h  llcp_pdu.c  llcp_pdu.h  mac.h  mac_iso18092.c
libnfc-llcp/test/: Makefile.am  log4crc  run-test.sh  test_dummy_mac_link.c  test_llc_connection.c  test_llc_link.c  test_llc_service.c  test_llcp_link.c  test_llcp_parameters.c  test_llcp_pdu.c  test_mac_link.c
libnfc-llcp/tools/: Makefile.am
libnfc-llcp/tools/llcp-pdu-explain/: Makefile.am  llcp-pdu-explain.c
libnfc-llcp/tools/llcp-test-client/: Makefile.am  llcp_test_client.c
libnfc-llcp/tools/llcp-test-server/: Makefile.am  README  connected-echo-server.c  connected-echo-server.h  connectionless-echo-server.c  connectionless-echo-server.h  llcp-test-server.c
nfc-eventd/: AUTHORS  Makefile.am  configure.ac  nfc-eventd.conf.sample
nfc-eventd/conf/: Makefile.am  nfc-eventd-dbus.conf  nfc-eventd.conf
nfc-eventd/debian/: changelog  control  copyright  rules
nfc-eventd/src/: Makefile.am  nfc-eventd.c  types.h
nfc-eventd/src/debug/: Makefile.am  debug.c  debug.h
nfc-eventd/src/modules/: Makefile.am  nem_common.h  nem_dbus.c  nem_dbus.h  nem_execute.c  nem_execute.h  nfc-dbus-object.xml
nfc-eventd/src/nfcconf/: Makefile.am  README.nfcconf  internal.h  lex-parse.l  nfcconf.c  nfcconf.h  nfclex.c  parse.c  write.c
nfcd/: AUTHORS  CMakeLists.txt  COPYING  Makefile.am  README  configure.ac  nfcd.conf  nfcd.desktop
nfcd/conf/: Makefile.am  nfcd-dbus.conf
nfcd/src/: CMakeLists.txt  Content.cpp  Content.h  Entry.cpp  Entry.h  Makefile.am  MimeContentEntry.cpp  MimeContentEntry.h  NFCd.cpp  NFCd.h  NfcDevice.cpp  NfcDevice.h  NfcDevice.xml  NfcDeviceManager.cpp  NfcDeviceManager.h  NfcDeviceManager.xml  NfcForumManager.cpp  NfcForumManager.h  NfcForumManager.xml  NfcForumTag.cpp  NfcForumTag.h  NfcForumTag.xml  NfcTarget.cpp  NfcTarget.h  NfcTarget.xml  NfcdObject.h  NfcdObject.xml  TitleEntry.cpp  TitleEntry.h  UriEntry.cpp  UriEntry.h  iso14443b.c  iso14443b.h  main.cpp  nfcd-dbus-object.xml  nfcd.c  nfcforum_tag.c  nfcforum_type4_tag.c  nfcforum_type4_tag.h
nfcutils/: ChangeLog  configure.ac
nfcutils/debian/: changelog  control  nfcutils.install
nfcutils/src/: Makefile.am  lsnfc.c
pam_nfc/: Makefile  Makefile.am  README  configure.ac  nfc-access.c  nfc-access.h  nfc-pam-add.c  nfc.c  nfc.h  nfcauth.c  nfcauth.h  nfcauth_backend_config.c  pam_nfc.c
pam_nfc/debian/: changelog  control  copyright  libpam-nfc.install  rules  watch
ucard/: Makefile.am  README  TODO  configure.ac  scp_auth
ucard/common/: Makefile.am  on_password_requested.c  on_password_requested.h
ucard/demo/: Makefile.am  gpio.c  gpio.h  info.c
ucard/demo/acces/: Makefile.am  access_file.c  access_file.h
ucard/demo/fidelite/: Makefile.am
ucard/demo/transport/: Makefile.am
ucard/examples/: Makefile.am
ucard/examples/barber-application/: Makefile.am  README  application.c
ucard/examples/cardlock-application/: Makefile.am  application.c  cardlock.xml
ucard/examples/fastfood-application/: Makefile.am  application.c  fastfood.xml
ucard/examples/marchant-application/: Makefile.am  application.c  marchant.xml
ucard/examples/passport-application/: Makefile.am  application.c  passport.xml
ucard/libucard/: Makefile.am  kiosk.3  kiosk.c  ucard.3  ucard.c  ucard.h  ucard_application.3  ucard_application.c  ucard_application_create.3  ucard_application_create.c  ucard_application_file.3  ucard_application_file.c  ucard_application_select.3  ucard_application_select.c  ucard_authenticate.3  ucard_authenticate.c  ucard_clear_record_file.3  ucard_clear_record_file.c  ucard_error.3  ucard_error.c  ucard_internal.h  ucard_read_data.3  ucard_read_data.c  ucard_read_records.3  ucard_read_records.c  ucard_transaction_abort.3  ucard_transaction_abort.c  ucard_transaction_commit.3  ucard_transaction_commit.c  ucard_value_file_credit.3  ucard_value_file_credit.c  ucard_value_file_debit.3  ucard_value_file_debit.c  ucard_value_file_get_value.3  ucard_value_file_get_value.c  ucard_value_file_limited_credit.3  ucard_value_file_limited_credit.c  ucard_version.h  ucard_write_data.3  ucard_write_data.c  (+2 more)
ucard/manual/: .dot2tex.template.tex  Makefile  code-generation.dot  intitial-personalisation.dot  kiosk.mp  ucard-sdk.tex
ucard/stylesheets/: Makefile.am  common.xsl  ucard.xsd  ucard.xsl
ucard/tools/: Makefile.am
ucard/tools/ucard-explain/: Makefile.am  ucard-explain.1  ucard-explain.c
ucard/tools/ucard-keygen/: Makefile.am  ucard-keygen.1  ucard-keygen.c
ucard/tools/ucard-passwd/: Makefile.am  ucard-passwd.c
ucard/tools/ucard-prepare/: Makefile.am  ucard-prepare.c
ucard/tools/ucard-recover-issuer/: Makefile.am  ucard-recover-issuer.c
(+69 files in other folders)
