PROJECT( nfcd )

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# pkg-config modules
FIND_PACKAGE( PkgConfig REQUIRED )
## LibNFC
PKG_CHECK_MODULES( LIBNFC libnfc )
LINK_DIRECTORIES( ${LIBNFC_LIBRARY_DIRS} )
INCLUDE_DIRECTORIES( ${LIBNFC_INCLUDE_DIRS} )

## LibFreeFare
PKG_CHECK_MODULES( LIBFREEFARE libfreefare )
LINK_DIRECTORIES( ${LIBFREEFARE_LIBRARY_DIRS} )
INCLUDE_DIRECTORIES( ${LIBFREEFARE_INCLUDE_DIRS} )  

# Qt4
FIND_PACKAGE( Qt4 REQUIRED )
SET(QT_DONT_USE_QTGUI true)
SET(QT_USE_QTDBUS true)

# Qt Includes
INCLUDE(${QT_USE_FILE})


IF(CMAKE_COMPILER_IS_GNU_CC)
  # Use C99 standard
  ADD_DEFINITIONS(-std=c99)
  # Make sure we will not miss some warnings ;)
  ADD_DEFINITIONS(-Wall -pedantic)
ENDIF(CMAKE_COMPILER_IS_GNU_CC)

# Current Project Include
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/src)

ADD_SUBDIRECTORY(src)

